Fixed background gradient not staying fixed on mobile by putting it on the body's :before pseudo-element instead of the body

--- a/holo-base-elements.css
+++ b/holo-base-elements.css
@@ -1,8 +1,15 @@
 body {
-	background-attachment:fixed;
-	
 	font-family:Roboto, "Droid Sans", Arial, Helvetica, sans-serif;
 	font-size:11pt;
+}
+body:before { /* This is used for the background gradient */
+	z-index:-1000;
+	content:"";
+	position:fixed;
+	left:0;
+	right:0;
+	top:0;
+	bottom:0;
 }
 
 button, input[type="button"], input[type="submit"], input[type="reset"], input[type="radio"], input[type="checkbox"] {
