--- a/holo-dark-elements.css
+++ b/holo-dark-elements.css
@@ -2,16 +2,17 @@
 
 body {
 	background-color:#E8E8E8;
+	color:white;
+}
+body:before {
+	    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#272D33');
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#272D33')";
 	background-image:-webkit-gradient(linear, left top, left bottom, from(#000000), to(#272D33));
 	background-image:-webkit-linear-gradient(#000000, #272D33);
 	background-image:   -moz-linear-gradient(#000000, #272D33);
 	background-image:    -ms-linear-gradient(#000000, #272D33);
 	background-image:     -o-linear-gradient(#000000, #272D33);
 	background-image:        linear-gradient(#000000, #272D33);
-	    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#272D33');
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#000000', endColorstr='#272D33')";
-	
-	color:white;
 }
 
 a {
