--- a/holo-light-elements.css
+++ b/holo-light-elements.css
@@ -2,16 +2,17 @@
 
 body {
 	background-color:#E8E8E8;
+	color:black;
+}
+body:before {
+	    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#E8E8E8', endColorstr='#FBFBFB');  /* old versions of IE get  */
+	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#E8E8E8', endColorstr='#FBFBFB')"; /* boring linear gradients */
 	background-image:-webkit-gradient(radial, 50% 100%, 0, 50% 100%, 50%, from(#FBFBFB), to(#E8E8E8));
 	background-image:-webkit-radial-gradient(50% 100%, circle, #FBFBFB, #E8E8E8);
 	background-image:   -moz-radial-gradient(50% 100%, circle, #FBFBFB, #E8E8E8);
 	background-image:    -ms-radial-gradient(50% 100%, circle, #FBFBFB, #E8E8E8);
 	background-image:     -o-radial-gradient(50% 100%, circle, #FBFBFB, #E8E8E8);
 	background-image:        radial-gradient(50% 100%, circle, #FBFBFB, #E8E8E8);
-	    filter:  progid:DXImageTransform.Microsoft.gradient(startColorstr='#E8E8E8', endColorstr='#FBFBFB');  /* old versions of IE get  */
-	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr='#E8E8E8', endColorstr='#FBFBFB')"; /* boring linear gradients */
-	
-	color:black;
 }
 
 a {
